--- a/index.html
+++ b/index.html
@@ -1,5 +1,62 @@
-<html>
-  <center>
-    <h1>Hello World Lucver</h1>
-  </center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lucver</title>
+  <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="dist/css/mainstyle.css">
+</head>
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent border-bottom border-light">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand font-weight-bold">Lucver</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-menu" aria-controls="navbar-list-menu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar-list-menu">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Projects</a>
+          </li>
+          <li class="nav-item mr-3">
+            <a href="#" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-outline-success">Contact now!</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--/ Navbar -->
+
+  <!-- Jumbotron -->
+  <div class="bg-warning" id="jumbotron">
+      <!-- <img class="" src="assets/img/background.jpg" alt="background image"> -->
+      <div class="container-fluid">
+        <div class="bg-light" id="jumbotron-title">
+          <h4 class="font-weight-bolder">Hi im Lucky Adhitya!</h4>
+          <p>Im a Website Developer</p>
+        </div>
+      </div>
+  </div>
+  <!--/ Jumbotron -->
+
+  <div class="container bg-warning">
+    test
+  </div>
+
+
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="dist/js/bootstrap.min.js"></script>
+</body>
 </html>
