--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent border-bottom border-light">
+  <nav class="navbar navbar-expand-lg navbar-dark border-bottom border-light">
     <div class="container-fluid">
       <a href="#" class="navbar-brand font-weight-bold">Lucver</a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-menu" aria-controls="navbar-list-menu" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-menu" aria-controls="navbar-list-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
 
-      <div class="collapse navbar-collapse" id="navbar-list-menu">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <button class="btn btn-sm btn-outline-light">contact me</button>
+        </li>
+      </ul>
+
+      <!-- <div class="collapse navbar-collapse" id="navbar-list-menu">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a href="#" class="nav-link">Home</a>
@@ -33,26 +39,39 @@
             <button class="btn btn-outline-success">Contact now!</button>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </nav>
   <!--/ Navbar -->
 
   <!-- Jumbotron -->
-  <div class="bg-warning" id="jumbotron">
-      <!-- <img class="" src="assets/img/background.jpg" alt="background image"> -->
+  <div id="jumbotron">
+      <img src="assets/img/background.jpg" alt="background image">
       <div class="container-fluid">
-        <div class="bg-light" id="jumbotron-title">
-          <h4 class="font-weight-bolder">Hi im Lucky Adhitya!</h4>
-          <p>Im a Website Developer</p>
+        <div id="jumbotron-title">          
+          <h4 class="text-white font-weight-bolder">Hi..!</h4>
+          <h4 class="text-white font-weight-bolder">I'm Lucky Adhitya</h4>
+          <h2 class="text-white font-weight-bolder">Website Developer</h2>
+          <button class="btn btn-light">MORE ABOUT ME</button>
         </div>
       </div>
   </div>
   <!--/ Jumbotron -->
 
-  <div class="container bg-warning">
+  <div class="container bg-danger" id="menu">
     test
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
   </div>
+
 
 
   
