[modify] jumbotron, [add] project show

--- a/index.html
+++ b/index.html
@@ -58,18 +58,34 @@
   </div>
   <!--/ Jumbotron -->
 
-  <div class="container bg-danger" id="menu">
-    test
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque molestiae velit dolorum voluptates adipisci voluptas aliquam sint, hic ut a vitae tempore aliquid odit dignissimos facilis iste maiores qui enim.
+  <div class="container-fluid" id="menu">
+    <div id="project-show">
+      <div class="row">
+        <div class="col-md-4 mx-auto py-5">
+          <div class="card m-3 project-1" id="p1">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p2.png" alt="Project 1">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto py-5">
+          <div class="card m-3">
+            <div class="card-body">
+              <img src="assets/img/p1.png" alt="Project 1">
+              asret
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto py-5">
+          <div class="card m-3">
+            <div class="card-body">
+              <img src="assets/img/p1.png" alt="Project 1">
+              asret
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
