[add] about me, [finish] project show

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lucver</title>
+  <title>LAFF</title>
   <link rel="stylesheet" href="dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="dist/css/mainstyle.css">
 </head>
@@ -12,34 +12,13 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark border-bottom border-light">
     <div class="container-fluid">
-      <a href="#" class="navbar-brand font-weight-bold">Lucver</a>
-
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-menu" aria-controls="navbar-list-menu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
+      <a href="#" class="navbar-brand font-weight-bold">L - A - F</a>
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <button class="btn btn-sm btn-outline-light">contact me</button>
         </li>
       </ul>
-
-      <!-- <div class="collapse navbar-collapse" id="navbar-list-menu">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Projects</a>
-          </li>
-          <li class="nav-item mr-3">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-          <li class="nav-item">
-            <button class="btn btn-outline-success">Contact now!</button>
-          </li>
-        </ul>
-      </div> -->
     </div>
   </nav>
   <!--/ Navbar -->
@@ -58,38 +37,73 @@
   </div>
   <!--/ Jumbotron -->
 
+  <!-- My Project -->
   <div class="container-fluid" id="menu">
-    <div id="project-show">
+    <div class="py-3" id="project-show">
       <div class="row">
-        <div class="col-md-4 mx-auto py-5">
-          <div class="card m-3 project-1" id="p1">
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p1">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p1.png" alt="Project 1">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p2">
             <div class="card-body p-0 m-0">
               <img class="" src="assets/img/p2.png" alt="Project 1">
             </div>
           </div>
         </div>
-        <div class="col-md-4 mx-auto py-5">
-          <div class="card m-3">
-            <div class="card-body">
-              <img src="assets/img/p1.png" alt="Project 1">
-              asret
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p3">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p3.jpg" alt="Project 1">
             </div>
           </div>
         </div>
-        <div class="col-md-4 mx-auto py-5">
-          <div class="card m-3">
-            <div class="card-body">
-              <img src="assets/img/p1.png" alt="Project 1">
-              asret
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p4">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p4.png" alt="Project 1">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p3">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p3.jpg" alt="Project 1">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto py-1">
+          <div class="card project-item" id="p4">
+            <div class="card-body p-0 m-0">
+              <img class="" src="assets/img/p4.png" alt="Project 1">
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!--/ My Project -->
 
 
-
+  <div class="bg-black py-5">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+            <h3>About Me</h3>
+        </div>
+        <div class="col-md-6">
+          <div id="myPhotos">
+            <!-- <img src="assets/img/p-me.JPG" alt=""> -->
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="dist/js/bootstrap.min.js"></script>
