--- a/index.html
+++ b/index.html
@@ -94,11 +94,19 @@
       <div class="row">
         <div class="col-md-6">
             <h3>About Me</h3>
+            <!-- <p>
+              Nama saya Lucky Adhitya, saya menekuni bidang Web Developer saya lulusan baru dari Sekolah Menengah Kejuruan 2 Jakarta.
+              Sekarang saya bekerja di sebuah perusahaan sebagai iOS Developer. Saya terus mempelajari semua yang berhubungan dengan pemrograman
+              karena saya suka bahasa pemrograman.
+            </p> -->
+            <p>
+              Hello.. I'm Lucky Adhitya, I'm a Web Developer and i was fresh graduate from vocational high school in Jakarta. 
+              Now i work in a company as iOS Developer. I always learn all about programming, that because i love it.
+            </p>
         </div>
         <div class="col-md-6">
           <div id="myPhotos">
-            <!-- <img src="assets/img/p-me.JPG" alt=""> -->
-            
+            <img class="img-thumbnail p-0 border-0 w-75 mx-auto" src="assets/img/p-me.JPG" alt="myPhotos">
           </div>
         </div>
       </div>
