--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="col-md-6">
           <div id="myPhotos">
-            <img class="img-thumbnail p-0 border-0 w-75 mx-auto" src="assets/img/p-me.JPG" alt="myPhotos">
+            <img class="img-thumbnail p-0 border-0 w-75 mx-auto" src="assets/img/p-me.png" alt="myPhotos">
           </div>
         </div>
       </div>
