--- a/index.html
+++ b/index.html
@@ -89,29 +89,75 @@
   <!--/ My Project -->
 
 
+  <!-- About Me -->
   <div class="bg-black py-5">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-            <h3>About Me</h3>
-            <!-- <p>
-              Nama saya Lucky Adhitya, saya menekuni bidang Web Developer saya lulusan baru dari Sekolah Menengah Kejuruan 2 Jakarta.
-              Sekarang saya bekerja di sebuah perusahaan sebagai iOS Developer. Saya terus mempelajari semua yang berhubungan dengan pemrograman
-              karena saya suka bahasa pemrograman.
-            </p> -->
-            <p>
-              Hello.. I'm Lucky Adhitya, I'm a Web Developer and i was fresh graduate from vocational high school in Jakarta. 
-              Now i work in a company as iOS Developer. I always learn all about programming, that because i love it.
-            </p>
+            <div class="col-md-12 border border-white">
+              <h3>About Me</h3>
+              <!-- <p>
+                Nama saya Lucky Adhitya, saya menekuni bidang Web Developer saya lulusan baru dari Sekolah Menengah Kejuruan 2 Jakarta.
+                Sekarang saya bekerja di sebuah perusahaan sebagai iOS Developer. Saya terus mempelajari semua yang berhubungan dengan pemrograman
+                karena saya suka bahasa pemrograman.
+              </p> -->
+              <p class="text-justify">
+                Hello.. I'm Lucky Adhitya, I'm a Web Developer and i was fresh graduate from vocational high school in Jakarta. 
+                Now i work in a company as iOS Developer. I always learn all about programming, that because i love it.
+              </p>
+              <div class=" my-3">
+                <span class="text-dark bg-white p-2 rounded">
+                  <img class="m-0" src="assets/img/mail-icon.png" width="20px" alt="instagram" >
+                  <a href="mailto:luckyadhitya313@gmail.com?subject=hai lucky" class="text-dark">luckyadhitya313@gmail.com</a>
+                </span>
+              </div>
+              <div class=" my-3">
+                <span class="text-dark bg-white p-2 rounded">
+                  <img class="m-0" src="assets/img/ig-icon.png" width="20px" alt="instagram" >
+                  <a href="https://www.instagram.com/laf_1092" class="text-dark">laf_1092</a>
+                </span>
+              </div>
+            </div>
         </div>
         <div class="col-md-6">
           <div id="myPhotos">
-            <img class="img-thumbnail p-0 border-0 w-75 mx-auto" src="assets/img/p-me.png" alt="myPhotos">
+            <img class="img-thumbnail p-0 border-0 mx-auto" src="assets/img/p-me.png" alt="myPhotos">
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!--/ About Me -->
+
+  <footer class="col-md-12 py-3">
+    <div class="row">
+      <div class="col-md-4 my-2">
+        <!-- Mail Me -->
+        <div class="border border-dark p-2 rounded" id="mailMe">
+          <div class="bg-black p-1 text-white mb-2 rounded-pill text-center">
+            <span class="h4 ">ngobrol ngapa!</span> <span>diem2 bae</span>
+          </div>
+          <div class="form-group">
+            <input type="text" name="name" class="form-control col-md-" placeholder="Tulis nama kamu">
+            <input type="email" name="email" class="form-control col-md-6" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" placeholder="Masukan pesanmu disini. .  ." name="textMail" cols="10" rows="3"></textarea>
+          </div>
+          <button class="btn btn-outline-dark col-md-12">kirim pesan</button>
+        </div>
+        <!--/ Mail Me -->
+      </div>
+
+      <!-- Copyright -->
+      <div class="col-md-8 my-2">
+        <div class="my-auto text-right">
+          <p class="m-0">&copy;Lucky Adhitya </p>
+          <span class="font-weight-bolder">we fix, they running, don't touch it</span>
+        </div>
+      </div>
+    </div>
+  </footer>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="dist/js/bootstrap.min.js"></script>
