[fix] vertical align copyright

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
       </div>
 
       <!-- Copyright -->
-      <div class="col-md-8 my-2">
-        <div class="my-auto text-right">
+      <div class="col-md-8 my-auto">
+        <div class="text-right">
           <p class="m-0">&copy;Lucky Adhitya </p>
           <span class="font-weight-bolder">we fix, they running, don't touch it</span>
         </div>
