[modify] get some transition and transform css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
   <!-- My Project -->
   <div class="container-fluid" id="menu">
-    <div class="py-3" id="project-show">
+    <div class="py-3 my-5" id="project-show">
+      <div class="col-md-12 text-center mb-3">
+        <span class="border-bottom border-dark pb-1 font-weight-bolder h3">My Project</span>
+      </div>
       <div class="row">
         <div class="col-md-4 mx-auto py-1">
           <div class="card project-item" id="p1">
@@ -93,8 +96,8 @@
   <div class="bg-black py-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6">
-            <div class="col-md-12 border border-white">
+        <div class="col-md-6 mb-2">
+            <div class="col-md-12 rounded border border-white">
               <h3>About Me</h3>
               <!-- <p>
                 Nama saya Lucky Adhitya, saya menekuni bidang Web Developer saya lulusan baru dari Sekolah Menengah Kejuruan 2 Jakarta.
@@ -138,7 +141,7 @@
             <span class="h4 ">ngobrol ngapa!</span> <span>diem2 bae</span>
           </div>
           <div class="form-group">
-            <input type="text" name="name" class="form-control col-md-" placeholder="Tulis nama kamu">
+            <input type="text" name="name" class="form-control col-md-6" placeholder="Tulis nama kamu">
             <input type="email" name="email" class="form-control col-md-6" placeholder="Email">
           </div>
           <div class="form-group">
