--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     </div>
     <!-- end breaktime -->
 
-    <!-- skills -->
-    <section class="skills">
+    <!-- skill -->
+    <section class="skill">
       <div class="container">
         <div class="row">
           <div class="col-xl-6 col-lg-4 col-md-12 col-xs-6 mb-5">
-            <div class="skills-caption">
+            <div class="skill-caption">
               <h1>do i have skills?</h1>
               <p>absolutely not! but this is the result of what I learned.</p>
             </div>
           </div>
           <div class="col-xl-6 col-lg-8 col-md-12 col-xs-12 mb-5">
-            <div class="row">
-              <div class="col-xl-3 col-md-3 col-sm-4 mb-3">
+            <div class="skill-list row">
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
                     <img src="assets/img/logo/php-logo.png" class="card-img-top" alt="php logo" />
@@ -106,7 +106,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-3 col-md-3 col-sm-4 mb-3">
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
                     <img src="assets/img/logo/js-logo.png" class="card-img-top" alt="javascript logo" />
@@ -116,7 +116,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-3 col-md-3 col-sm-4 mb-3">
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
                     <img src="assets/img/logo/node-logo.png" class="card-img-top" alt="nodejs logo" />
@@ -126,7 +126,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-3 col-md-3 col-sm-4 mb-3">
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
                     <img src="assets/img/logo/swift-logo.png" class="card-img-top" alt="swift logo" />
