[add] skill bootstrap, electronjs, reactjs

--- a/index.html
+++ b/index.html
@@ -136,6 +136,36 @@
                   </div>
                 </div>
               </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/bootstrap-logo.svg" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Bootstrap</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/electronjs-logo.svg" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">ElectronJS</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/react-logo.svg" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">ReactJS</h5>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
