[change] png to svg asset, [add] skill mysql, git

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
-                    <img src="assets/img/logo/php-logo.png" class="card-img-top" alt="php logo" />
+                    <img src="assets/img/logo/php-logo.svg" class="card-img-top" alt="php logo" />
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">PHP</h5>
@@ -109,7 +109,7 @@
               <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
                 <div class="card shadow-lg border-0">
                   <div class="card-img">
-                    <img src="assets/img/logo/js-logo.png" class="card-img-top" alt="javascript logo" />
+                    <img src="assets/img/logo/js-logo.svg" class="card-img-top" alt="javascript logo" />
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">Javascript</h5>
@@ -153,6 +153,36 @@
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">ElectronJS</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/react-logo.svg" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">ReactJS</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/mysql-logo.png" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">MySQL</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item col-xl-3 col-md-3 col-sm-4 mb-3">
+                <div class="card shadow-lg border-0">
+                  <div class="card-img">
+                    <img src="assets/img/logo/git-logo.png" class="card-img-top" alt="swift logo" />
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Git</h5>
                   </div>
                 </div>
               </div>
