[modify] typo maintening

--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
     <!-- footer -->
     <section class="footer">
       <center>
-        <h1>On comming</h1>
-        <p>lanjut ntar dulu, capek bikin css</p>
+        <h1>Still working with this layout</h1>
+        <p>lanjut ntar dulu, capek mikir script css ny sumpah</p>
       </center>
     </section>
     <!-- end footer -->
